fixed drag on mobile

--- a/src/styles/AssemblyTable.module.css
+++ b/src/styles/AssemblyTable.module.css
@@ -65,6 +65,7 @@
   display: flex;
 }
 .detail_wrapper {
+  touch-action: none;
 }
 .detail {
   height: auto;
